# cost-optimizer-for-amazon-workspaces

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  NOTICE.txt  README.md  gulpfile.js  package.json  sonar-project.properties
source/: .coverage  Dockerfile  cdk.json  child.py  package-lock.json  package.json  parent.py  pyproject.toml  requirements.txt  setup.py  testing_requirements.txt  tsconfig.json
source/docker/: docker-build.sh  docker-clean.sh  docker-run.sh  ecr-login.sh  ecr-push.sh
source/ecs/: directory_reader.py  metrics_helper.py  workspaces_app.py  workspaces_helper.py
source/ecs/utils/: s3_utils.py  solution_metrics.py
source/engine/: Dockerfile  docker-build.sh  docker-clean.sh  docker-run.sh  wco.py
source/engine/lib/: directory_reader.py  metrics_helper.py  workspaces_helper.py
source/engine/tests/: test_metrics_helper.py  (+1 more)
source/helpers/: create-task.py  uuid-helper.py
source/lambda/: create-task.py  requirements.txt  uuid-helper.py
source/lib/: cost-optimizer-for-amazon-workspaces-hub-stack.ts  cost-optimizer-for-amazon-workspaces-spoke-stack.ts  lambda_helper.py  metrics_helper.py  wco_helper.py  workspaces_helper.py
source/register_spoke_lambda/: register_spoke_accounts.py  request_event.py
source/scheduler/: create-task.py
source/test/: hub-snapshot.test.ts  spoke-snapshot.test.ts
source/tests/: test_metrics_helper.py  test_workspaces_app.py  test_workspaces_helper.py
source/uuid_helper/: uuid_helper.py
source/workspaces_app/: main.py  requirements.txt  setup_requirements.txt  test_workspaces_app.py
(+83 files in other folders)
