[tool.poetry]
name = "cost-optimizer-for-amazon-workspaces"
version = "2.8.1"
description = "Cost Optimizer for Amazon Workspaces (SO0018)"
authors = ["AWS Solutions"]
license = "Apache-2.0"
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
boto3 = "1.34.144"
botocore = "1.34.144"
certifi = "2024.07.04"
charset-normalizer = "2.1.1"
idna = "3.7"
jmespath = "1.0.1"
python-dateutil = "2.9.0"
requests = "^2.32.4"
s3transfer = "0.10.2"
six = "1.16.0"
urllib3 = "^2.5.0"
aws-lambda-powertools = "3.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "3.10.0"
coverage = "7.2.0"
attrs = "23.1.0"
iniconfig = "2.0.0"
packaging = "23.0"
pluggy = "1.0.0"
pyparsing = "3.0.9"
tomli = "2.0.1"
freezegun = "1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
